# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.591 2006/03/31 16:47:10 wolf31o2 Exp $

  31 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Removed check for livecd/dev-manager being udev since it was done
  incorrectly and genkernel assumes udev by default on a 2.6 kernel and devfs
  by default on a 2.4 kernel. Thanks to Alvin Lee <liyiming@ict.ac.cn> on bug
  #128265 for pointing this out.

  23 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/elilo-3.4-cdtar.tar.bz2,
  +livecd/cdtar/elilo-3.6-cdtar.tar.bz2:
  Replaced elilo-3.4 cdtar with elilo-3.6 cdtar for IA64.

  22 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Fix to ensure that we look inside the chroot for /etc/hosts.bck, not on our
  live system. You can thank Andrew Gaffney for the fix.

  22 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Don't copy motd files if we're using livecd/type generic-livecd.

  22 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/support/livecdfs-update.sh:
  Made sure that livecd/motd is ignored for livecd/type: gentoo-* and added
  some extra cleanup to generic-livecd.

  16 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/yaboot-1.3.11-cdtar.tar.bz2,
  -livecd/cdtar/yaboot-1.3.11-ppc64-cdtar-r1.tar.bz2,
  +livecd/cdtar/yaboot-1.3.13-cdtar.tar.bz2,
  -livecd/cdtar/ppc-yaboot-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Added sed to PPC/PPC64 to change boot.msg to match the hardware for which
  the CD was built, merged the PPC and PPC64 cdtar files into a single cdtar,
  and removed all older cdtar files for PPC*.

  13 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  livecd/files/livecd.motd.txt: